# ai_mental_wellbeing_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: auth.py  deps.py  logging_setup.py  main.py  settings.py
apps/api/app/agents/: anthropic_client.py  companion.py  profile_updater.py  safety.py  title.py
apps/api/app/agents/prompts/: companion_base.md  companion_elevated.md  loader.py  profile_updater.md  safety_classifier.md  title_generator.md
apps/api/app/crisis/: card.py
apps/api/app/db/: models.py  repos.py  session.py
apps/api/app/routers/: chat.py  conversations.py  me.py
apps/api/app/schemas/: chat.py  profile.py
apps/api/app/services/: chat_service.py  rate_limit.py
apps/api/scripts/: classifier_cases.jsonl  classifier_eval.py
apps/api/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_companion.py  test_conversations_endpoints.py  test_crisis_card.py  test_db_session.py  test_me_endpoint.py  test_profile_schema.py  test_profile_updater.py  test_rate_limit.py  test_repos.py  test_safety.py  test_settings.py  test_title.py
apps/api/tests/fixtures/: jwt.py
apps/web/: .gitignore  middleware.ts  package.json  playwright.config.ts  tailwind.config.ts
apps/web/app/: apple-icon.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  sw-register.tsx
apps/web/e2e/: happy-path.spec.ts
apps/web/public/: sw.js
scripts/: dev.sh
(+24 files in other folders)
